[metadata]
name = tno.mpc.mpyc.matrix_inverse
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = A generic extension to MPyC that allows you to securely compute the inverse of a matrix that may contain SecFxp values
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    MPyC
    matrix_inverse
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.mpyc.matrix_inverse/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/mpyc/matrix_inverse/0.3.1
    Source Code = https://github.com/TNO-MPC/mpyc.matrix_inverse
version = attr: tno.mpc.mpyc.matrix_inverse.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.mpyc.matrix_inverse
    tno.mpc.mpyc.matrix_inverse.test
zip_safe = False
install_requires =
    mpyc~=0.7.0
    numpy
namespace_packages =
    tno
    tno.mpc
    tno.mpc.mpyc

[options.package_data]
tno.mpc.mpyc.matrix_inverse = py.typed

[options.extras_require]
gmpy =
    gmpy2
tests =
    pytest
    tno.mpc.mpyc.stubs